# stockprice-CPP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.github/workflows/: release.yml  test.yml
include/: get_ticker_statistics.hpp
libs/openssl-3.2.1/: Makefile  Makefile.in  configdata.pm  libssl.pc  openssl.pc
libs/openssl-3.2.1/apps/: progs.c  progs.h
libs/openssl-3.2.1/crypto/: buildinf.h  params_idx.c
libs/openssl-3.2.1/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cmp-test  cms-test  conf-test  crl-test  ct-test  decoder-test  pem-test  punycode-test  quic-client-test  server-test  smime-test  v3name-test  x509-test
libs/openssl-3.2.1/providers/: legacy.dylib
libs/openssl-3.2.1/ssl/: libssl-lib-tls_srp.d
libs/openssl-3.2.1/test/: aesgcmtest  afalgtest  algorithmid_test  asn1_decode_test  asn1_dsa_internal_test  asn1_encode_test  asn1_internal_test  asn1_stable_parse_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_addr_test  bio_callback_test  bio_core_test  bio_dgram_test  bio_enc_test  bio_memleak_test  bio_prefix_text  bio_readbuffer_test  bio_tfo_test  bioprinttest  bn_internal_test  bntest  buildtest_c_conftypes  buildtest_c_core_object  buildtest_c_cryptoerr_legacy  buildtest_c_encoder  buildtest_c_hpke  buildtest_c_http  buildtest_c_macros  buildtest_c_param_build  buildtest_c_params  buildtest_c_prov_ssl  buildtest_c_provider  buildtest_c_quic  buildtest_c_sslerr_legacy  buildtest_c_thread  (+187 more)
libs/openssl-3.2.1/util/: quicserver  wrap.pl
openssl-3.2.1/: Makefile  Makefile.in  configdata.pm  libcrypto.pc  libssl.pc  openssl.pc
openssl-3.2.1/crypto/: buildinf.h  legacy-dso-mem_clr.d  libcrypto-shlib-deterministic_nonce.d  libcrypto-shlib-threads_none.d  libcrypto-shlib-threads_pthread.d  params_idx.c
openssl-3.2.1/crypto/conf/: libcrypto-shlib-conf_mod.d
openssl-3.2.1/crypto/ec/: libcrypto-lib-ecp_sm2p256.d  libcrypto-shlib-ecp_sm2p256.d
openssl-3.2.1/crypto/pem/: loader_attic-dso-pvkfmt.d
openssl-3.2.1/engines/: capi.dylib  dasync-dso-e_dasync.d  dasync.dylib  loader_attic-dso-e_loader_attic.d  loader_attic.dylib  ossltest-dso-e_ossltest.d  ossltest.dylib  padlock.dylib
openssl-3.2.1/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cmp-test  cms-test  conf-test  crl-test  ct-test  decoder-test  pem-test  punycode-test  quic-client-test  server-test  smime-test  v3name-test  x509-test
openssl-3.2.1/include/openssl/: configuration.h
openssl-3.2.1/providers/: legacy.dylib
openssl-3.2.1/ssl/: libssl-shlib-bio_ssl.d  libssl-shlib-d1_lib.d  libssl-shlib-d1_msg.d  libssl-shlib-d1_srtp.d  libssl-shlib-event_queue.d  libssl-shlib-methods.d  libssl-shlib-pqueue.d  libssl-shlib-s3_enc.d  libssl-shlib-s3_lib.d  libssl-shlib-s3_msg.d  libssl-shlib-ssl_asn1.d  libssl-shlib-ssl_cert.d  libssl-shlib-ssl_cert_comp.d  libssl-shlib-ssl_ciph.d  libssl-shlib-ssl_conf.d  libssl-shlib-ssl_init.d  libssl-shlib-ssl_lib.d  libssl-shlib-ssl_mcnf.d  libssl-shlib-ssl_rsa.d  libssl-shlib-ssl_sess.d  libssl-shlib-ssl_stat.d  libssl-shlib-ssl_txt.d  libssl-shlib-ssl_utst.d  libssl-shlib-t1_enc.d  libssl-shlib-t1_lib.d  libssl-shlib-t1_trce.d  libssl-shlib-tls13_enc.d  libssl-shlib-tls_depr.d  libssl-shlib-tls_srp.d  tls13secretstest-bin-tls13_enc.d
openssl-3.2.1/ssl/quic/: libssl-shlib-cc_newreno.d  libssl-shlib-quic_ackm.d  libssl-shlib-quic_cfq.d  libssl-shlib-quic_channel.d  libssl-shlib-quic_demux.d  libssl-shlib-quic_fifd.d  libssl-shlib-quic_impl.d  libssl-shlib-quic_method.d  libssl-shlib-quic_reactor.d  libssl-shlib-quic_record_rx.d  libssl-shlib-quic_record_shared.d  libssl-shlib-quic_record_tx.d  libssl-shlib-quic_record_util.d  libssl-shlib-quic_rstream.d  libssl-shlib-quic_rx_depack.d  libssl-shlib-quic_sf_list.d  libssl-shlib-quic_sstream.d  libssl-shlib-quic_statm.d  libssl-shlib-quic_stream_map.d  libssl-shlib-quic_thread_assist.d  libssl-shlib-quic_tls.d  libssl-shlib-quic_trace.d  libssl-shlib-quic_tserver.d  libssl-shlib-quic_txp.d  libssl-shlib-quic_txpim.d  libssl-shlib-quic_wire.d
openssl-3.2.1/ssl/record/: libssl-shlib-rec_layer_d1.d  libssl-shlib-rec_layer_s3.d
openssl-3.2.1/ssl/statem/: libssl-shlib-extensions.d  libssl-shlib-extensions_clnt.d  libssl-shlib-extensions_cust.d  libssl-shlib-extensions_srvr.d  libssl-shlib-statem.d  libssl-shlib-statem_clnt.d  libssl-shlib-statem_dtls.d  libssl-shlib-statem_lib.d  libssl-shlib-statem_srvr.d
openssl-3.2.1/test/: aesgcmtest  afalgtest  algorithmid_test  asn1_decode_test  asn1_dsa_internal_test  asn1_encode_test  asn1_internal_test  asn1_stable_parse_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_addr_test  bio_callback_test  bio_comp_test  bio_core_test  bio_dgram_test  bio_enc_test  bio_memleak_test  bio_prefix_text  bio_readbuffer_test  bio_tfo_test  bioprinttest  bn_internal_test  bntest  build_wincrypt_test  buildtest_c_cmp  buildtest_c_cmp_util  buildtest_c_configuration  buildtest_c_core  buildtest_c_core_dispatch  buildtest_c_core_names  buildtest_c_crmf  buildtest_c_decoder  buildtest_c_e_ostime  buildtest_c_ess  buildtest_c_fips_names  buildtest_c_fipskey  (+196 more)
openssl-3.2.1/tools/: c_rehash
openssl-3.2.1/util/: quicserver  wrap.pl
src/: get_ticker_statistics.cpp  main.cpp
(+1271 files in other folders)
